refactor(stock): remove id from StockResponse and fix stream compatibility
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>